Mon Oct 15 23:32:22 2001  George Lebl <jirka@5z.com>

	* Release 2.2.4.3

Mon Oct 15 23:28:45 2001  George Lebl <jirka@5z.com>

	* config/gdm.conf.in: the xdmcp indirect and manage waits were
	  too long, changed to 15 seconds.  If you can't finish the
	  xdmcp conversation in 15 seconds, you don't really have a
	  connection you want to use X on.

Fri Oct 12 12:52:08 2001  George Lebl <jirka@5z.com>

	* configure.in, daemon/Makefile.am, gui/Makefile.am,
	  utils/Makefile.am:  Apply patch from Ali Akcaagac
	  <ali.akcaagac@stud.fh-wilhelmshaven.de> for compatibility
	  with automake 1.5 and autoconf 2.50

	* config/locale.alias, gui/languages.c:  Make russian use KOI8-R and
	  add ukrainian

Mon Oct 08 20:54:33 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c:  Fix small leak

	* daemon/server.[ch], daemon/slave.c: wipe cookies better and safer

	* daemon/server.c: server killing right after launch race fixed,
	  probably was harmless though, also reset the vt number on linux
	  before starting a new server.

	* daemon/slave.c: increase the loop of death time for logouts, and
	  always redo parsed automatic/timed login vars after each display
	  start as the display number / hostname might have changed.  When
	  we can't open a display, it's XFAILED rather then REMANAGE so
	  that we go into the "your X sucks" dialog.  We need better
	  error reporting though.

Sun Oct 07 16:55:24 2001  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" to the languages list.

Fri Oct 05 13:58:41 2001  George Lebl <jirka@5z.com>

	* daemon/verify-pam.c: user PAM_ESTABLISH_CRED for pam_setcred

Thu Oct 04 13:19:50 2001  George Lebl <jirka@5z.com>

	* Release 2.2.4.2

Thu Oct 04 13:18:30 2001  George Lebl <jirka@5z.com>

	* daemon/misc.c: the mode for sticky 01777 not 02777.  Whoops.

Thu Oct 04 00:12:05 2001  George Lebl <jirka@5z.com>

	* daemon/misc.c, gui/gdmXnestserver.c: also check stale lock files
	  when looking for empty display names
