@@ -1101,7 +1101,10 @@ gdm_slave_greeter (void)
 	/* this is again informal only, if the greeter does time out it will
 	 * not actually login a user if it's not enabled for this display */
 	if (d->timed_login_ok) {
-		ve_setenv ("GDM_TIMED_LOGIN_OK", ParsedTimedLogin, TRUE);
+		if(ParsedTimedLogin == NULL)
+			ve_setenv ("GDM_TIMED_LOGIN_OK", " ", TRUE);
+		else
+			ve_setenv ("GDM_TIMED_LOGIN_OK", ParsedTimedLogin, TRUE);
 	} else {
 		ve_unsetenv ("GDM_TIMED_LOGIN_OK");
 	}
