@@ -1,3 +1,11 @@
+Sat Oct 20 11:57:50 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c:  Fix from the FreeBSD bugtracker to fix a crash
+	  related to setenv (foo, NULL, 1).
+
+	* daemon/gdm-net.c:  Fix from the FreeBSD bugtracker to fix creation
+	  of the local socket
+
 Mon Oct 15 23:32:22 2001  George Lebl <jirka@5z.com>
 
 	* Release 2.2.4.3
